modif design page connexion,inscription, list location, detail location, profil. ajout back btn

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
             android:name=".ProfilActivity"
             android:exported="false" />
         <activity
+            android:name=".ReservationActivity"
+            android:exported="false" />
+        <activity
             android:name=".SplashActivity"
             android:exported="true">
             <intent-filter>
